infrastructure/kubernetes/overlays/production/delete-base-egress-policy.yml
$patch: delete
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-legent-egress
  namespace: legent
