infrastructure/kubernetes/overlays/production/delete-base-ingress-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-legent-apps
  namespace: legent
$patch: delete
